--- a/UI/Surgical/PathologistSignoutAuditMessagePage.xaml
+++ b/UI/Surgical/PathologistSignoutAuditMessagePage.xaml
@@ -3,23 +3,26 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" FontSize="14">
-    <Grid>
+    <Grid Margin="5,5,5,5">
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <ListView Grid.Column="0" Grid.Row="0" Margin="5,5,5,5" HorizontalAlignment="Stretch" ItemsSource="{Binding Path=AuditMessages}">
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn Header="Audit Message" DisplayMemberBinding="{Binding}" Width="800" />
-                </GridView>
+        <TextBlock Grid.Column="0" Grid.Row="0" Margin="5,5,5,5" HorizontalAlignment="Center" Text="Signout issues to be resolved" />
+        <ListBox Grid.Column="0" Grid.Row="1" Margin="5,5,5,5" HorizontalAlignment="Stretch" ItemsSource="{Binding Path=AuditMessages}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel HorizontalAlignment="Stretch" Orientation="Horizontal">
+                        <TextBlock Margin="2" Text="{Binding}" />
+                    </StackPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
 
-            </ListView.View>
-        </ListView>
-
-        <Button Grid.Column="0" Grid.Row="1" Height="40" Width="100" Margin="5,5,5,5" HorizontalAlignment="Left" Click="ButtonBack_Click" Visibility="{Binding Path=BackButtonVisibility}">&lt; Back</Button>
-        <Button Grid.Column="0" Grid.Row="1" Height="40" Width="100" Margin="5,5,5,5" HorizontalAlignment="Right" Click="ButtonNext_Click" Visibility="{Binding Path=NextButtonVisibility}">Next ></Button>
-        <Button Grid.Column="0" Grid.Row="1" Height="40" Width="100" Margin="5,5,5,5" HorizontalAlignment="Right" Click="ButtonClose_Click" Visibility="{Binding Path=CloseButtonVisibility}">Close</Button>
+        <Button Grid.Column="0" Grid.Row="2" Height="40" Width="100" Margin="5,5,5,5" HorizontalAlignment="Left" Click="ButtonBack_Click" Visibility="{Binding Path=BackButtonVisibility}">&lt; Back</Button>
+        <Button Grid.Column="0" Grid.Row="2" Height="40" Width="100" Margin="5,5,5,5" HorizontalAlignment="Right" Click="ButtonNext_Click" Visibility="{Binding Path=NextButtonVisibility}">Next ></Button>
+        <Button Grid.Column="0" Grid.Row="2" Height="40" Width="100" Margin="5,5,5,5" HorizontalAlignment="Right" Click="ButtonClose_Click" Visibility="{Binding Path=CloseButtonVisibility}">Close</Button>
     </Grid>
 </UserControl>
