--- a/UI/Surgical/PqrsSignoutPage.xaml
+++ b/UI/Surgical/PqrsSignoutPage.xaml
@@ -9,46 +9,59 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
+        
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Column="0" Grid.Row="0" FontSize="14" Margin="2,2,2,2" FontWeight="Bold" Text="{Binding Path=PQRSMeasure.Header}"/>
+        <Grid Grid.Column="0" Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+            </Grid.RowDefinitions>
 
-        <ListBox x:Name="RadioButtonList" Grid.Column="0" Grid.Row="1" BorderThickness="0" Background="{x:Null}" Margin="5,5,5,5" Grid.ColumnSpan="2"
-				ItemsSource="{Binding Path=PQRSMeasure.PQRSCodeCollection}" SelectionChanged="RadioButtonList_SelectionChanged">
-            <ListBox.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <StackPanel Margin="5,5,5,5"></StackPanel>
-                </ItemsPanelTemplate>
-            </ListBox.ItemsPanel>
-            <ListBox.ItemContainerStyle>
-                <Style TargetType="{x:Type ListBoxItem}">
-                    <Setter Property="Template">
-                        <Setter.Value>
-                            <ControlTemplate TargetType="{x:Type ListBoxItem}">
-                                <RadioButton IsChecked="{Binding IsSelected, RelativeSource={x:Static RelativeSource.TemplatedParent}}" Margin="2,2,2,2">
-                                    <RadioButton.Content>
-                                        <TextBlock Width="300" TextWrapping="Wrap" Text="{Binding Path=FormattedReportingDefinition}" Margin="2,2,2,2"></TextBlock>
-                                    </RadioButton.Content>
-                                </RadioButton>
-                            </ControlTemplate>
-                        </Setter.Value>
-                    </Setter>
-                </Style>
-            </ListBox.ItemContainerStyle>
-        </ListBox>
+            <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" FontWeight="Bold" Text="{Binding Path=PQRSMeasure.Header}"/>
 
-        <CheckBox Name="CheckBoxNotApplicable" Grid.Column="0" Grid.Row="2" Margin="5,2,2,2" VerticalAlignment="Center" Content="PQRS is not applicable for this case."
-				Checked="CheckBoxNotApplicable_Checked"/>
+            <ListBox x:Name="RadioButtonList" Grid.Column="1" Grid.Row="1" BorderThickness="0" Background="{x:Null}" Margin="5,5,5,5"
+				    ItemsSource="{Binding Path=PQRSMeasure.PQRSCodeCollection}" SelectionChanged="RadioButtonList_SelectionChanged">
+                <ListBox.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <StackPanel Margin="5,5,5,5"></StackPanel>
+                    </ItemsPanelTemplate>
+                </ListBox.ItemsPanel>
+                <ListBox.ItemContainerStyle>
+                    <Style TargetType="{x:Type ListBoxItem}">
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                                    <RadioButton IsChecked="{Binding IsSelected, RelativeSource={x:Static RelativeSource.TemplatedParent}}" Margin="2,2,2,2">
+                                        <RadioButton.Content>
+                                            <TextBlock Width="300" TextWrapping="Wrap" Text="{Binding Path=FormattedReportingDefinition}" Margin="2,2,2,2"></TextBlock>
+                                        </RadioButton.Content>
+                                    </RadioButton>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </ListBox.ItemContainerStyle>
+            </ListBox>
 
-        <Button Grid.Column="0" Grid.Row="4" Margin="5,5,5,5" Height="40" Width="100" HorizontalAlignment="Left" Click="ButtonBack_Click" Visibility="{Binding Path=BackButtonVisibility}">&lt; Back</Button>
-        <Button Grid.Column="0" Grid.Row="4" Margin="5,5,5,5" Height="40" Width="100" HorizontalAlignment="Right" Click="ButtonNext_Click" Visibility="{Binding Path=NextButtonVisibility}">Next ></Button>
-        <Button Grid.Column="0" Grid.Row="4" Margin="5,5,5,5" Height="40" Width="100" HorizontalAlignment="Right" Click="ButtonClose_Click" Visibility="{Binding Path=CloseButtonVisibility}">Close</Button>
+            <CheckBox Name="CheckBoxNotApplicable" Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" VerticalAlignment="Center" Content="PQRS is not applicable for this case."
+				    Checked="CheckBoxNotApplicable_Checked"/>
+        </Grid>
+
+        <Button Grid.Column="0" Grid.Row="2" Margin="5,5,5,5" Height="40" Width="100" HorizontalAlignment="Left" Click="ButtonBack_Click" Visibility="{Binding Path=BackButtonVisibility}">&lt; Back</Button>
+        <Button Grid.Column="0" Grid.Row="2" Margin="5,5,5,5" Height="40" Width="100" HorizontalAlignment="Right" Click="ButtonNext_Click" Visibility="{Binding Path=NextButtonVisibility}">Next ></Button>
+        <Button Grid.Column="0" Grid.Row="2" Margin="5,5,5,5" Height="40" Width="100" HorizontalAlignment="Right" Click="ButtonClose_Click" Visibility="{Binding Path=CloseButtonVisibility}">Close</Button>
 
     </Grid>
 </UserControl>
