--- a/UI/Surgical/ColorectalCancerOrderPage.xaml
+++ b/UI/Surgical/ColorectalCancerOrderPage.xaml
@@ -23,7 +23,7 @@
 
             <Border Grid.Row="0" Grid.Column="0" BorderBrush="Transparent" BorderThickness="0" Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}"></Border>
 
-            <Grid Grid.Column="0" Margin="10" Width="180">
+            <Grid Grid.Column="0" Margin="10" Width="240">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
@@ -36,17 +36,21 @@
                     <Hyperlink Click="HyperLinkLynchSyndrome_Click">Lynch Syndrome Evaluation</Hyperlink>
                 </TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="3" Margin="5,3,0,0" TextWrapping="Wrap">                    
+                <TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,0" TextWrapping="Wrap">                    
                     <Hyperlink Click="HyperLinkComprehensiveColonCancerProfile_Click">Comprehensive Colon Cancer Profile</Hyperlink>
                 </TextBlock>
-        </Grid>
+
+                <TextBlock Grid.Column="0" Grid.Row="3" Margin="5,3,0,0" TextWrapping="Wrap">                    
+                    <Hyperlink Click="HyperLinkBRAFV600E_Click">BRAF V600E/K Mutation Analysis</Hyperlink>
+                </TextBlock>
+            </Grid>
 
             <Grid Grid.Column="1">
 
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="*"></RowDefinition>
-                    <RowDefinition Height="*"></RowDefinition>
+                    <RowDefinition Height="2*"></RowDefinition>
                 </Grid.RowDefinitions>
 
                 <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2"  HorizontalAlignment="Center" Text="The following tests are suggested for this case:" />
@@ -65,9 +69,9 @@
                     <ListView.View>
                         <GridView>
                             <GridViewColumn DisplayMemberBinding="{Binding Path=ReportNo}" Header="Report No" Width="100"/>
-                            <GridViewColumn DisplayMemberBinding="{Binding Path=OrderTime}" Header="Date" Width="150"/>
-                            <GridViewColumn DisplayMemberBinding="{Binding Path=PanelSetName}" Header="Order" Width="200"/>
-                            <GridViewColumn DisplayMemberBinding="{Binding Path=FinalTime}" Header="Final" Width="100"/>
+                            <GridViewColumn DisplayMemberBinding="{Binding Path=OrderTime}" Header="Date" Width="160"/>
+                            <GridViewColumn DisplayMemberBinding="{Binding Path=PanelSetName}" Header="Order" Width="230"/>
+                            <GridViewColumn DisplayMemberBinding="{Binding Path=FinalTime}" Header="Final" Width="80"/>
                         </GridView>
                     </ListView.View>
                 </ListView>
