--- a/UI/Surgical/TypingWorkspace.xaml
+++ b/UI/Surgical/TypingWorkspace.xaml
@@ -256,7 +256,7 @@
 						<StackPanel>
 							<TextBlock Margin="0,5,0,0" FontWeight="Bold">Clinical Information:</TextBlock>
 							<TextBox Name="TextBoxClinical" TextWrapping="Wrap" AcceptsReturn="True"
-									 Text="{Binding Path=SurgicalTestOrder.ClinicalInfo}"
+									 Text="{Binding Path=AccessionOrder.ClinicalHistory}"
 									 KeyUp="TextBox_KeyUp" FontSize="12" IsEnabled="{Binding Path=FieldEnabler.IsProtectedEnabled}" 
 									 Style="{StaticResource NewTextBox}" SpellCheck.IsEnabled="False">
 								<TextBox.ContextMenu>
