--- a/UI/Test/MissingInformationResultPage.xaml
+++ b/UI/Test/MissingInformationResultPage.xaml
@@ -35,12 +35,14 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="*"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="*"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="*"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                 </Grid.RowDefinitions>
 
@@ -58,15 +60,39 @@
 					</Hyperlink>
 				</TextBlock>
 
+                <TextBlock Grid.Column="0" Grid.Row="3" Margin="5,3,0,0">                    
+					<Hyperlink Click="HyperLinkFax_Click">
+						<TextBlock Text="Fax" />
+					</Hyperlink>
+				</TextBlock>
+
                 <TextBlock Grid.Column="0" Grid.Row="4" Margin="5,3,0,0">                    
+					<Hyperlink Click="HyperLinkThirdCall_Click">
+						<TextBlock Text="Third Call" />
+					</Hyperlink>
+				</TextBlock>
+
+                <TextBlock Grid.Column="0" Grid.Row="5" Margin="5,3,0,0">                    
+					<Hyperlink Click="HyperLinkClientSystemLookup_Click">
+						<TextBlock Text="Client System Lookup" />
+					</Hyperlink>
+				</TextBlock>
+
+                <TextBlock Grid.Column="0" Grid.Row="7" Margin="5,3,0,0">                    
 					<Hyperlink Click="HyperLinkFinalize_Click">
 						<TextBlock Text="Finalize" />
 					</Hyperlink>
 				</TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="8" Margin="5,3,0,0">                    
+                <TextBlock Grid.Column="0" Grid.Row="9" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkUnfinalResults_Click">
-						<TextBlock Text="Unfinalize Results" />
+						<TextBlock Text="Unfinalize" />
+					</Hyperlink>
+				</TextBlock>
+
+                <TextBlock Grid.Column="0" Grid.Row="10" Margin="5,3,0,0">                    
+                    <Hyperlink Click="HyperLinkClearResults_Click">
+						<TextBlock Text="Clear" />
 					</Hyperlink>
 				</TextBlock>
 
@@ -81,7 +107,10 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="*"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
@@ -91,16 +120,28 @@
                 <TextBox Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" HorizontalAlignment="Stretch" Text="{Binding Path=MissingInformtionTestOrder.MissingInformation}"></TextBox>
                 
                 <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">First Call:</TextBlock>
-                <TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" HorizontalAlignment="Stretch" Text="{Binding Path=MissingInformtionTestOrder.FirstCallDisplayString, Mode=OneWay}" IsEnabled="False"></TextBox>
+                <TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" HorizontalAlignment="Stretch" Text="{Binding Path=MissingInformtionTestOrder.FirstCallComment}" IsEnabled="False"></TextBox>
 
-                <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" FontWeight="Bold">Final:</TextBlock>
-                <CheckBox Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" IsChecked="{Binding Path=MissingInformtionTestOrder.Final}" IsEnabled="False"></CheckBox>
+                <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">Second Call:</TextBlock>
+                <TextBox Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" HorizontalAlignment="Stretch" Text="{Binding Path=MissingInformtionTestOrder.SecondCallComment}" IsEnabled="False"></TextBox>
 
-                <TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" FontWeight="Bold">Date Finaled:</TextBlock>
-                <TextBox Grid.Column="1" Grid.Row="4" Margin="2,2,2,2" Text="{Binding Path=MissingInformtionTestOrder.FinalTime}" IsEnabled="False"></TextBox>
+                <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">Fax:</TextBlock>
+                <TextBox Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" HorizontalAlignment="Stretch" Text="{Binding Path=MissingInformtionTestOrder.FaxSentBy}" IsEnabled="False"></TextBox>
 
-                <TextBlock Grid.Column="0" Grid.Row="5" Margin="2,2,2,2" FontWeight="Bold">Finaled By:</TextBlock>
-                <TextBox Grid.Column="1" Grid.Row="5" Margin="2,2,2,2" Text="{Binding Path=MissingInformtionTestOrder.Signature}" IsEnabled="False"></TextBox>
+                <TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">Third Call:</TextBlock>
+                <TextBox Grid.Column="1" Grid.Row="4" Margin="2,2,2,2" HorizontalAlignment="Stretch" Text="{Binding Path=MissingInformtionTestOrder.ThirdCallComment}" IsEnabled="False"></TextBox>
+
+                <TextBlock Grid.Column="0" Grid.Row="5" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">Client System Lookup:</TextBlock>
+                <TextBox Grid.Column="1" Grid.Row="5" Margin="2,2,2,2" HorizontalAlignment="Stretch" Text="{Binding Path=MissingInformtionTestOrder.ClientSystemLookupBy}" IsEnabled="False"></TextBox>
+                
+                <TextBlock Grid.Column="0" Grid.Row="6" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">Final:</TextBlock>
+                <CheckBox Grid.Column="1" Grid.Row="6" Margin="2,2,2,2" IsChecked="{Binding Path=MissingInformtionTestOrder.Final}" IsEnabled="False"></CheckBox>
+
+                <TextBlock Grid.Column="0" Grid.Row="7" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">Date Finaled:</TextBlock>
+                <TextBox Grid.Column="1" Grid.Row="7" Margin="2,2,2,2" Text="{Binding Path=MissingInformtionTestOrder.FinalTime}" IsEnabled="False"></TextBox>
+
+                <TextBlock Grid.Column="0" Grid.Row="8" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">Finaled By:</TextBlock>
+                <TextBox Grid.Column="1" Grid.Row="8" Margin="2,2,2,2" Text="{Binding Path=MissingInformtionTestOrder.Signature}" IsEnabled="False"></TextBox>
             </Grid>
 
             <Grid Grid.Column="2" Grid.Row="0">
