--- a/UI/Client/ProviderLookupDialog.xaml
+++ b/UI/Client/ProviderLookupDialog.xaml
@@ -29,10 +29,11 @@
 							 ItemsSource="{Binding Path=ProviderCollection}">
 						<ListView.View>
 							<GridView>								
-								<GridViewColumn Header="Name" Width="200" DisplayMemberBinding="{Binding Path=DisplayName}" />																                                
-								<GridViewColumn Header="Credentials" Width="100" DisplayMemberBinding="{Binding Path=Credentials}" />
-                                <GridViewColumn Header="NPI" Width="100" DisplayMemberBinding="{Binding Path=Npi}" />
-							</GridView>
+								<GridViewColumn Header="Name" Width="350" DisplayMemberBinding="{Binding Path=Physician.DisplayName}" />
+                                <GridViewColumn Header="NPI" Width="100" DisplayMemberBinding="{Binding Path=Physician.Npi}" />
+                                <GridViewColumn Header="Home Base Phone" Width="130" DisplayMemberBinding="{Binding Path=Client.Telephone,Converter={StaticResource PhoneNumberConverter}}" />
+                                <GridViewColumn Header="Home Base Fax" Width="130" DisplayMemberBinding="{Binding Path=Client.Fax,Converter={StaticResource PhoneNumberConverter}}" />
+                            </GridView>
 						</ListView.View>
 					</ListView>
 
