--- a/UI/Test/HPVTWIResultPage.xaml
+++ b/UI/Test/HPVTWIResultPage.xaml
@@ -30,6 +30,7 @@
 					<RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="20"></RowDefinition>
 					<RowDefinition Height="Auto"></RowDefinition>
 					<RowDefinition Height="Auto"></RowDefinition>
@@ -65,7 +66,11 @@
                 <TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkPositive_Click">Positive</Hyperlink>
                 </TextBlock>
-                
+
+                <TextBlock Grid.Column="0" Grid.Row="3" Margin="5,3,0,0">                    
+                    <Hyperlink Click="HyperLinkInvalid_Click">Invalid</Hyperlink>
+                </TextBlock>
+
                 <TextBlock Grid.Column="0" Grid.Row="18" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkAcceptResults_Click">Accept Results</Hyperlink>
 				</TextBlock>
