--- a/UI/PantherOrdersDialog.xaml
+++ b/UI/PantherOrdersDialog.xaml
@@ -74,9 +74,11 @@
                         </ListView.View>
                     </ListView>
 
-                    <Button Grid.Column="1" Grid.Row="1" Click="ButtonResult_Click" Margin="2,2,2,2" Width="100" Height="50" VerticalAlignment="Top">Result</Button>
-                    <Button Grid.Column="1" Grid.Row="1" Click="ButtonResendPantherOrder_Click" Margin="2,2,2,2" Width="100" Height="50" VerticalAlignment="Top">Resend Order</Button>
-                    
+                    <StackPanel Grid.Column="1" Grid.Row="1">
+                        <Button Click="ButtonResult_Click" Margin="2,2,2,2" Width="100" Height="50" VerticalAlignment="Top">Result</Button>
+                        <Button Click="ButtonResendPantherOrder_Click" Margin="2,2,2,2" Width="100" Height="50" VerticalAlignment="Top">Resend Order</Button>
+                    </StackPanel>
+
                 </Grid>
             </TabItem>
             <TabItem Header="NG/CT">
