--- a/UI/Login/Receiving/AdditionalTestingEMailPage.xaml
+++ b/UI/Login/Receiving/AdditionalTestingEMailPage.xaml
@@ -60,7 +60,7 @@
                 <TextBox Name="TextBoxEMailAddress" Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=EMailAddress}" ></TextBox>
 
                 <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Top">Message:</TextBlock>
-                <TextBox Name="TextBoxMessage" Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Text="{Binding Path=Message}" TextWrapping="Wrap"></TextBox>
+                <TextBox Name="TextBoxMessage" Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Text="{Binding Path=Message}" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
 
             </Grid>
 
